--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -16,7 +16,6 @@ a.sb-btn {
   align-items: center;
   flex-wrap: wrap;
 }
-
 .sb-btn {
   white-space: nowrap;
   -webkit-tap-highlight-color: transparent;
@@ -73,7 +72,7 @@ $btns: "gray" var(--gray-200) var(--gray-400) var(--gray-100),
       @if $btntype == btn {
         background-color: #{nth($btn, 2)};
         border-color: #{nth($btn, 2)};
-        color:var(--white);
+        color: var(--white);
         &:hover,
         &:active,
         &.active {
@@ -116,7 +115,7 @@ $btns: "gray" var(--gray-200) var(--gray-400) var(--gray-100),
 }
 // Create button sizes classess from the below list
 // class height padding fontsize width
-$btnsizes: "xs" 1.5rem "0.25rem 1rem" 0.75rem null,
+$btnsizes: "xs" 1.5rem "0.25rem 0.5rem" 0.75rem null,
   "normal" 2rem "0.5rem 1rem" 0.75rem null, "sm" 2.5rem "0.5rem 1rem" 1rem null,
   "md" 3rem "0.5rem 1rem" 1remrem null, "lg" 3.5rem "1rem 1.5rem" 1.25rem null,
   "full" 1.5rem "0.5rem 1rem" 1.25rem 100%;
